deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buildsage-api
  namespace: buildsage
  labels:
    app: buildsage-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: buildsage-api
  template:
    metadata:
      labels:
        app: buildsage-api
    spec:
      containers:
        - name: buildsage-api
          image: ghcr.io/jahanzaibwakeel/buildsage:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop:
                - ALL
